--- a/src/index.less
+++ b/src/index.less
@@ -249,11 +249,11 @@ html[lang="ar"] body {
     }
   }
 }
-.saleBunny-drawer{
+.sale-drawer{
   .ant-drawer-content-wrapper{
     height: 300px !important;
     .ant-drawer-content{
-      background: #242735;
+      background: #131922;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       .ant-drawer-body{
@@ -263,11 +263,11 @@ html[lang="ar"] body {
   }
 }
 
-.breedBunnyList-drawer{
+.breedList-drawer{
   .ant-drawer-content-wrapper{
     height: 600px !important;
     .ant-drawer-content{
-      background: #242735;
+      background: #131922;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       .ant-drawer-body{
@@ -277,11 +277,11 @@ html[lang="ar"] body {
   }
 }
 
-.breedBunny-drawer{
+.breed-drawer{
   .ant-drawer-content-wrapper{
-    height: 500px !important;
+    height: 600px !important;
     .ant-drawer-content{
-      background: #242735;
+      background: #131922;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       .ant-drawer-body{
