--- a/src/index.less
+++ b/src/index.less
@@ -291,6 +291,21 @@ html[lang="ar"] body {
   }
 }
 
+.turntable-drawer{
+  .ant-drawer-content-wrapper{
+    height: 800px !important;
+    max-height: 90vh;
+    .ant-drawer-content{
+      background: #131922;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+      .ant-drawer-body{
+        padding: 0px;
+      }
+    }
+  }
+}
+
 .ant-drawer-content {
   background-color: unset;
 }
